kubernetes/platform/identity/authelia/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authelia
  labels:
    name: authelia
    tier: platform
    component: identity
    purpose: oidc-provider
