kubernetes/platform/identity/authelia/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia
  namespace: authelia
  labels:
    app.kubernetes.io/name: authelia
    app.kubernetes.io/component: oidc-provider
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - "auth.timourhomelab.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authelia-oidc
          port: 9091
